@@ -6,6 +6,7 @@
  */
 
 #include <dix-config.h>
+#include <xkb-config.h>
 
 /* Use loadable XGL modules. */
 #undef XGL_MODULAR
