@@ -1,3 +1,11 @@
+2006-03-21  David Reveman  <davidr@novell.com>
+
+	* configure.ac: xglx requires xkbfile.
+
+	* include/xgl-config.h.in: Include xkb-config.h.
+
+	* hw/xgl/glx/xglx.c: Get default XKB options from X server.
+
 2006-03-20  David Reveman  <davidr@novell.com>
 
 	* hw/xgl/xglinit.c: Add workaround for xgl being unresponsive on
